
[package]
authors = ["APIx DevTools team"]
edition = "2021"
name = "atlas_local"
version = "0.0.0-preview.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
atlas-local = { git = "https://github.com/mongodb/atlas-local-lib.git", rev = "c899203a7bef73945cd04d97a44d34b4db274c74" }
bollard = "0.19.2"
napi = { version = "3.0.0", features = ["async", "anyhow"] }
napi-derive = "3.0.0"
semver = "1.0.26"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
